src/styles/blocks/icon.scss
.icon {
  display: block;
  width: 22px;
  height: 22px;

  cursor: pointer;

  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;

  &--menu {
    background-image: url("../images/menu.svg");

    &:hover {
      background-image: url("../images/menu_hover.svg");
    }
  }

  &--cross {
    position: relative;
    z-index: 10;

    background-image: url("../images/cross.svg");
  }
}

